# summarizer

./: .gitignore  Makefile  Makefile.am  ProjectHome.md  README  autogen.sh  configure.ac  summarizer.pc.in
include/: file.h  summarizer.h  xml_parser.h
proto/: document.proto  query.proto  summarizer.proto
src/: Makefile.am  distribution.cc  document.cc  document_test.cc  example.cc  example_simple.cc  file.cc  gibbs.cc  klsum.cc  klsum_test.cc  lexicon.cc  lexicon_test.cc  logging.cc  news_postprocessor.cc  news_postprocessor_test.cc  redundancy.cc  run_KLSum.cc  run_KLSum_sentence.cc  run_KLSum_word.cc  run_TopicSum_sentence.cc  run_TopicSum_word.cc  sampling.cc  sampling_test.cc  sum.cc  sum_test.cc  summarizer.cc  summarizer_test.cc  test_postprocessor.cc  test_postprocessor_test.cc  topicsum.cc  topicsum_test.cc  topicsumgibbs.cc  topicsumgibbs_test.cc  xml_parser.cc  xml_parser_test.cc
src/summarizer/: distribution.h  distribution.pb.cc  distribution.pb.h  distribution.proto  document.h  document.pb.cc  document.pb.h  document.proto  file.h  gibbs.h  hash.h  klsum.h  lexicon.h  logging.h  news_postprocessor.h  postprocessor.h  redundancy.h  sampling.h  scoped_ptr.h  sum.h  summarizer.h  summarizer.pb.cc  summarizer.pb.h  summarizer.proto  test_postprocessor.h  topicsum.h  topicsumgibbs.h  types.h  xml_parser.h
src/testdata/: article_14319162.xml  singledoc
src/testdata/realcol1/: d1.xml  d2.xml  d3.xml  d4.xml
src/testdata/realcol2/: d1.xml  d2.xml  d3.xml  d4.xml
src/testdata/realcol3/: d1.xml  d2.xml  d3.xml  d4.xml
src/testdata/toycol1/: d1.xml  d2.xml
src/testdata/toycol2/: d1.xml  d2.xml  d3.xml
tests/: summarizer_test.cc  xml_parser_test.cc
tests/testdata/: article_14178836.xml  article_14357596.xml
